--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,10 @@
 			<version>1.37</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
