--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,13 @@ spring.threads.virtual.enabled=true
 management.endpoints.web.exposure.include=health,prometheus,metrics
 management.metrics.export.prometheus.enabled=true
 server.port=8080
+
+# ??? Caffeine
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=10m
+
+# ??? Redis
+#spring.cache.type=redis
+#spring.data.redis.host=localhost
+#spring.data.redis.port=6379
+#spring.cache.redis.time-to-live=600000
