--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,15 @@ spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=10m
 #spring.data.redis.host=localhost
 #spring.data.redis.port=6379
 #spring.cache.redis.time-to-live=600000
+
+# PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/taskdb
+spring.datasource.username=admin
+spring.datasource.password=admin123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+# MongoDB
+spring.data.mongodb.uri=mongodb://admin:admin123@localhost:27017/taskdb?authSource=admin
+spring.data.mongodb.database=taskdb
